--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,8 +98,11 @@ body {
   * {
     @apply border-border;
   }
+  html {
+    @apply h-screen m-0 p-0;
+  }
   body {
-    @apply min-h-screen bg-gradient-to-br from-indigo-100 via-white to-indigo-200 text-foreground;
+    @apply h-full m-0 p-0 bg-gradient-to-br from-indigo-100 via-white to-indigo-200 text-foreground;
   }
 }
 
